--- a/index.html
+++ b/index.html
@@ -6,9 +6,8 @@
 	</head>
 	
 	<body>
-		<audio autoplay>
-			<source src = "https://github.com/minh511/ruoiga.github.io/blob/main/non/odit.ogg?raw=true" type = "audio/ogg" />	
-			<source src = "https://github.com/minh511/ruoiga.github.io/blob/main/non/odit.mp3?raw=true" type = "audio/mpeg" />
+		<audio control>	
+			<source src = "https://github.com/minh511/ruoiga.github.io/blob/main/non/odit.mp3?raw=true" type = "audio/mp3" />
 		</audio>
 
 
