--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	
 	<body>
 		<audio control>	
-			<source src = "https://github.com/minh511/ruoiga.github.io/blob/main/non/odit.mp3?raw=true" type = "audio/mp3" />
+			<source src = "https://github.com/minh511/ruoiga.github.io/blob/main/non/odit.mp3?raw=true" type = "audio/mpeg" />
 		</audio>
 
 
