--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 	</head>
 	
 	<body>
-		<audio control>	
-			<source src = "https://github.com/minh511/ruoiga.github.io/blob/main/non/odit.mp3?raw=true" type = "audio/mpeg" />
+		<audio controls>	
+			<source src = "https://github.com/minh511/ruoiga.github.io/blob/main/non/odit.mp3?raw=true" type = "audio/mp3" />
 		</audio>
 
 
