--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	</head>
 	
 	<body>
-		<audio controls>	
+		<audio controls autoplay>	
 			<source src = "https://github.com/minh511/ruoiga.github.io/blob/main/non/odit.mp3?raw=true" type = "audio/mp3" />
 		</audio>
 
