--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 	<head>
@@ -7,7 +6,7 @@
 	
 	<body>
 		<audio controls autoplay>	
-			<source src = "https://github.com/minh511/ruoiga.github.io/blob/main/non/odit.mp3?raw=true" type = "audio/mp3" />
+			<source src = "/non/odit.mp3" type = "audio/mp3" />
 		</audio>
 
 
