--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
 		<title>Ruồi Gà</title>
 	</head>
 	
+
 	<body>
 		<video controls autoplay>	
 			<source src = "/non/odit.mp4" type = "video/mp4" />
 		</video>
-	<a>NONNNNNNNNNNN</a>
+
+		<br> <br>
+		<p style="color:red; font-family:verdana; font-size:60px">NONNNNNNNNNN</p>
 	</body>
 </html>
