--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
 		</video>
 
 		<br> <br>
-		<p style="color:red; font-family:verdana; font-size:60px">NONNNNNNNNNN</p>
+		<p style="color:gray; font-family:verdana;">:)))</p>
 	</body>
 </html>
