--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
 	
 
 	<body>
-		<video controls autoplay>	
+		<video controls autoplay loop>	
 			<source src = "/non/odit.mp4" type = "video/mp4" />
 		</video>
 
 		<br> <br>
-		<p style="color:gray; font-family:verdana;">:)))</p>
+		<p style="color:gray; font-family:verdana;">:))</p>
 	</body>
 </html>
