--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
 		</video>
 
 		<br> <br>
-		<p style="color:gray; font-family:verdana; font-size: 30">:))</p>
+		<p style="color:gray; font-family:verdana; font-size: 150%">:))</p>
 	</body>
 </html>
