--- a/index.html
+++ b/index.html
@@ -1,16 +1,10 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Ruồi Gà</title>
 	</head>
-	
 
-	<body>
-		<video controls autoplay loop>	
-			<source src = "/non/odit.mp4" type = "video/mp4" />
-		</video>
-
-		<br> <br>
-		<p style="color:gray; font-family:verdana; font-size: 300%;">:))</p>
-	</body>
-</html>
+<body>
+	<audio controls>
+  		<source src="../non/odit.ogg" type="audio/ogg">
+	</audio>
+<body>
