--- a/index.html
+++ b/index.html
@@ -1,5 +1,29 @@
 <!DOCTYPE html>
 <html>
+<head>
+<title>Ruồi Gà</title>
+</head>
+<body>
+
+
+<audio controls autoplay>
+  <source src=".../odit.mp3" type="audio/mpeg">
+</audio>
+
+
+</body>
+</html>
+
+
+
+
+
+
+
+
+<!--
+<!DOCTYPE html>
+<html>
 	<head>
 		<title>
 			nonnnn
@@ -277,3 +301,4 @@ function getTimeCodeFromNum(num) {
 		</script>
 	</body>
 </html>
+-->
