--- a/index.html
+++ b/index.html
@@ -3,13 +3,16 @@
 <head>
 <title>Ruồi Gà</title>
 </head>
+
 <body>
 
 
-<audio controls autoplay>
-  <source src=".../odit.mp3" type="audio/mpeg">
-</audio>
+<video controls>
+  <source src="../non/odit.ogg" type="video/ogg">
+</video>
 
 
 </body>
 </html>
+
+
