--- a/index.html
+++ b/index.html
@@ -6,11 +6,7 @@
 
 <body>
 
-
-<video controls>
-  <source src="../non/odit.ogg" type="video/ogg">
-</video>
-
+<img src="../non/logo.png" alt="FSchool logo" width="500" height="600">
 
 </body>
 </html>
