--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
 </head>
 
 <body>
-
-<img src="../non/logo.png" alt="FSchool logo" width="500" height="600">
-
+ <h1>Heading 1</h1>
+    <p>A Paragraph</p>
 </body>
 </html>
 
